--- a/index.html
+++ b/index.html
@@ -28,98 +28,14 @@
 <body class="bg-[#F4F9F8] text-roboto flex justify-between  gap-x-[35px] ">
     <aside class="sticky top-0 w-[260px] h-[900px] flex flex-col justify-between py-[21px] pr-[17px]">
         <nav>
-            <div class="relative flex items-center mb-[28px] px-[31px]">
-                <a class="absolute inset-0" href="#home"></a>
+            <a href="#home" class="flex items-center mb-[28px] px-[31px]">
                 <figure class="mr-[15px] w-[29px] h-[35px]">
                     <img class="h-full w-full object-cover" src="./assets/img/logo.png" alt="">
                 </figure>
                 <h1 class="font-bold text-[18px] text-[#0768B5]">Aster News</h1>
-            </div>
-            <div class="space-y-[2px] mb-[20px]">
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] bg-[#2F9FF810] text-[#2F9FF8] text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/home.svg" alt="">
-                    </figure>
-                    <span>Top Stories</span>
-                </div>
-                <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/globe.svg" alt="">
-                    </figure>
-                    <span>Around the World</span>
-                </div>
-                <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/briefcase.svg" alt="">
-                    </figure>
-                    <span>Business</span>
-                </div>
-                <div
-                    class="flex items-center relative px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/activity.svg" alt="">
-                    </figure>
-                    <span>Health</span>
-                </div>
-            </div>
-            <div class=" border-t border-b pt-[7px] pb-[3px] mb-[23px]">
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/shield.svg" alt="">
-                    </figure>
-                    <span>Covid 19</span>
-                </div>
-            </div>
-            <div class="pt-[7px] pb-[3px] mb-[23px]">
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/play-circle.svg" alt="">
-                    </figure>
-                    <span>Entertainment</span>
-                </div>
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/award.svg" alt="">
-                    </figure>
-                    <span>Sports</span>
-                </div>
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/message-circle.svg" alt="">
-                    </figure>
-                    <span>Discussion</span>
-                </div>
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/bell.svg" alt="">
-                    </figure>
-                    <span>Notification</span>
-                </div>
-                <div
-                    class="relative flex items-center px-[31px] rounded-[0_37px_37px_0] pt-[12px] pb-[14px] hover:bg-gray-200 text-[15px] font-bold">
-                    <a class="absolute inset-0" href="#"></a>
-                    <figure class="mr-[22px] size-[24px]">
-                        <img src="./assets/img/settings.svg" alt="">
-                    </figure>
-                    <span>News Feed Settings</span>
-                </div>
+            </a>
+            <div id="navbar" class="space-y-[2px] mb-[20px]">
+                
             </div>
         </nav>
         <div class="px-[16px]">
